--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -148,16 +148,19 @@ html {
 } 
 }
 
-@media only screen and (max-width: 970px) and (min-width: 850px) {
+@media only screen and (max-width: 950px) and (min-width: 730px) {
     .profile-info ul li{
-        font-size: 2.25vw;
+        font-size: 2.3vw;
+        padding-left: 10px;
+    }
+
+    .tagline {
+        font-size: 7.5vw;
     }
 }
 
 @media only screen and (max-width: 850px) and (min-width: 770px) {
-    .tagline {
-        font-size: 3.35rem;
-}
+    
 }
 
 @media only screen and (max-width: 730px) {
